globus-gsi-callback (5.7-1+gt6.@distro@) @distro@; urgency=low

  * GT-599: Race condition in globus_gsi_callback_get_SSL_callback_data_index() and globus_gsi_callback_get_X509_STORE_callback_data_index()

 -- Globus Toolkit <support@globus.org>  Thu, 28 May 2015 07:12:32 -0400

globus-gsi-callback (5.6-1+gt6.@distro@) @distro@; urgency=low

  * Doxygen markup fixes
  * Include more manpages for API
  * Fix dependency version
  * Fix typos and clarify some documentation

 -- Globus Toolkit <support@globus.org>  Wed, 24 Sep 2014 10:12:08 -0400

globus-gsi-callback (5.5-1+gt6.@distro@) @distro@; urgency=low

  * Merge fixes from ellert-globus_6_branch

 -- Globus Toolkit <support@globus.org>  Fri, 22 Aug 2014 16:29:28 -0400

globus-gsi-callback (5.4-3+gt6.@distro@) @distro@; urgency=low

  * Fix Source path

 -- Globus Toolkit <support@globus.org>  Wed, 20 Aug 2014 15:42:39 -0400

globus-gsi-callback (5.4-2+gt6.@distro@) @distro@; urgency=low

  * Rename dbg packages

 -- Globus Toolkit <support@globus.org>  Wed, 18 Jun 2014 14:38:43 -0400

globus-gsi-callback (5.4-1+gt6.@distro@) @distro@; urgency=low

  * Merge changes from Mattias Ellert

 -- Globus Toolkit <support@globus.org>  Mon, 09 Jun 2014 14:39:38 -0400

globus-gsi-callback (5.3-1+gt6.@distro@) @distro@; urgency=low

  * Use package-named config.h

 -- Globus Toolkit <support@globus.org>  Tue, 27 May 2014 09:36:46 -0400

globus-gsi-callback (5.2-1+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:47:28 -0400

globus-gsi-callback (5.1-3+gt6.@distro@) @distro@; urgency=low

  * Version bump for consistency

 -- Globus Toolkit <support@globus.org>  Fri, 18 Apr 2014 13:39:55 -0400

globus-gsi-callback (5.1-2+gt6.@distro@) @distro@; urgency=low

  * Packaging fixes, Warning Cleanup

 -- Globus Toolkit <support@globus.org>  Thu, 27 Feb 2014 16:48:40 -0500

globus-gsi-callback (5.1-1+gt6.@distro@) @distro@; urgency=low
